# auth-server

./: .env  .gitignore  Cargo.toml  diff.txt  info.md
api/: .gitignore  Cargo.toml
api/crates/application/src/services/: admin_service.rs  auth_service.rs  mod.rs  session_service.rs  token_service.rs  user_service.rs
api/crates/domain/: Cargo.toml
api/crates/domain/src/model/: mod.rs  user.rs  user_type.rs
api/crates/domain/src/repositories/: session_repository.rs  user_repository.rs
api/crates/persistence/: Cargo.toml
api/crates/persistence/src/models/: mod.rs  user_role.rs  user_row.rs
api/crates/persistence/src/repositories/: session_repository.rs  user_repository.rs
api/crates/server/: Cargo.toml
api/crates/server/src/: auth_constants.rs  config.rs  diesel_logging.rs  docs.rs  lib.rs  main.rs  router.rs  state.rs
api/crates/server/src/dto/: auth_dto.rs  mod.rs  oauth_dto.rs  session_dto.rs  user_dto.rs
api/crates/server/src/errors/: api_error.rs  error_body.rs
api/crates/server/src/middleware/: request_info_extractor.rs  user_extractor.rs
api/crates/server/src/routes/: admin.rs  auth.rs  mod.rs  oauth.rs  session.rs  user.rs
api/docker/: Dockerfile  docker-compose.yaml
api/migrations/2026-03-07-121925-0000_create_users_table/: up.sql
crates/application/: Cargo.toml
crates/application/src/: auth_service.rs  user_service.rs
crates/application/src/services/: auth_service.rs  mod.rs  session_service.rs  token_service.rs  user_service.rs
crates/application/src/utils/: token_generator.rs  token_handler.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/domain/src/model/: Claims.rs  claims.rs  mod.rs  request_info.rs  session.rs  user.rs  user_type.rs
crates/domain/src/repositories/: mod.rs  session_repository.rs  user_repository.rs
crates/persistence/: Cargo.toml  diesel.toml
crates/persistence/src/: lib.rs  schema.rs
crates/persistence/src/models/: mod.rs  session_row.rs  user_role.rs  user_row.rs
crates/persistence/src/repositories/: postgres_user_repository.rs  session_repository.rs  user_repository.rs
crates/server/: Cargo.toml
crates/server/src/: config.rs  docs.rs  lib.rs  logging.rs  main.rs  router.rs  state.rs
crates/server/src/dto/: auth_dto.rs  login_dto.rs  mod.rs  register_dto.rs  session_dto.rs  user_dto.rs
crates/server/src/errors/: api_error.rs  error_body.rs  mod.rs
crates/server/src/middleware/: admin_extractor.rs  auth_session.rs  mod.rs  request_info_extractor.rs  user_extractor.rs
crates/server/src/routes/: admin.rs  auth.rs  health.rs  mod.rs  session.rs  user.rs
docker/: Dockerfile  docker-compose.yaml
migrations/2026-03-07-121925-0000_create_users_table/: down.sql  up.sql
migrations/2026-03-07-182102-0000_create_sessions/: up.sql
src/: schema.rs
web/: package.json  pnpm-lock.yaml  vite.config.ts
web/src/lib/: auth-client.ts
web/src/lib/assets/: MoonIcon.svelte
web/src/lib/assets/favicon/: site.webmanifest
web/src/lib/components/ui/notification/: NotificationCard.svelte
web/src/lib/components/ui/theme-button/: theme-button.svelte
web/src/lib/server/: auth-config.ts
web/src/lib/types/: error.ts  session.ts  user.ts
web/src/routes/: +error.svelte  +layout.svelte  +page.svelte
web/src/routes/(protected)/: +layout.server.ts
web/src/routes/(protected)/account/: +page.server.ts  +page.svelte  +page.ts
web/src/routes/(protected)/sessions/: +page.svelte  +page.ts
web/src/routes/account/: +page.svelte  +page.ts
web/src/routes/auth/callback/: +server.ts
web/src/routes/login/: +page.svelte
web/src/routes/register/: +page.svelte
web/src/routes/sessions/: +page.svelte  +page.ts
