[workspace]
members = ["crates/*"]
resolver = "3"

[toolchain]
channel = "stable"
components = ["rustfmt", "clippy"]

[workspace.dependencies]
tokio = { version = "1.5", features = ["full"] }
axum = "0.8"
diesel = { version = "2.3", features = ["postgres", "uuid", "time"] }
diesel-async = { version = "0.7", features = ["postgres", "bb8"] }
dotenvy = "0.15"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
tower-cookies = "0.11"
async-trait = "0.1"
time = { version = "0.3", features = ["serde", "formatting"] }
thiserror = "2.0"
rand = "0.10"
argon2 = "0.6.0-rc.7"
base64 = "0.22"
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-appender = "0.2"
tower-http = { version = "0.6", features = ["trace", "request-id", "sensitive-headers"] }