[package]
name = "application"
version = "0.1.0"
edition = "2024"

[dependencies]
domain = {path ="../domain"}
persistence = {path = "../persistence"}
anyhow = "1.0.102"
argon2 = "0.6.0-rc.7"
thiserror = "2.0.18"
uuid = { version = "1.22.0", features = ["v4"] }
rand = "0.9.2"
base64 = "0.22.1"
time = "0.3.47"
