[package]
name = "application"
version = "0.1.0"
edition = "2024"

[dependencies]
domain = {path ="../domain"}
persistence = {path = "../persistence"}
thiserror.workspace = true
uuid.workspace = true
base64.workspace = true
time.workspace = true
hex.workspace = true
hmac.workspace = true
sha2.workspace = true
rand.workspace = true
argon2.workspace = true
tracing.workspace = true
jsonwebtoken.workspace = true
secrecy.workspace = true