[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
application = { path = "../application" }
persistence = { path = "../persistence" }
domain = { path = "../domain" }

diesel.workspace = true
diesel-async.workspace = true
uuid.workspace = true
serde.workspace = true
dotenvy.workspace = true
anyhow.workspace = true
tokio.workspace = true
axum.workspace = true
tower-cookies.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true